[gd_scene load_steps=137 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/idle/survivor-idle_0.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_1.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_3.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_6.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_7.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_8.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_9.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_10.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_11.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_12.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_13.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_14.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_15.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_16.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_17.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_18.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/feet/run/survivor-run_19.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_0.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_1.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_2.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_3.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_4.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_5.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_6.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_7.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_8.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_9.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_10.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_11.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_12.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_13.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_14.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_15.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_16.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_17.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_18.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/idle/survivor-idle_handgun_19.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_0.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_1.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_2.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_3.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_4.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_5.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_6.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_7.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_8.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_9.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_10.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_11.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_12.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_13.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_14.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_15.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_16.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_17.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_18.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/move/survivor-move_knife_19.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_0.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_1.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_2.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_3.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_4.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_5.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_6.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_7.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_8.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_9.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_10.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_11.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_12.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_13.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_14.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_15.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_16.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_17.png" type="Texture" id=80]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_18.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/idle/survivor-idle_knife_19.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_0.png" type="Texture" id=83]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_1.png" type="Texture" id=84]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_2.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_3.png" type="Texture" id=86]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_4.png" type="Texture" id=87]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_5.png" type="Texture" id=88]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_6.png" type="Texture" id=89]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_7.png" type="Texture" id=90]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_8.png" type="Texture" id=91]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_9.png" type="Texture" id=92]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_10.png" type="Texture" id=93]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_11.png" type="Texture" id=94]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_12.png" type="Texture" id=95]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_13.png" type="Texture" id=96]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/knife/meleeattack/survivor-meleeattack_knife_14.png" type="Texture" id=97]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_0.png" type="Texture" id=98]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_1.png" type="Texture" id=99]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_2.png" type="Texture" id=100]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_3.png" type="Texture" id=101]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_4.png" type="Texture" id=102]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_5.png" type="Texture" id=103]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_6.png" type="Texture" id=104]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_7.png" type="Texture" id=105]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_8.png" type="Texture" id=106]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_9.png" type="Texture" id=107]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_10.png" type="Texture" id=108]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_11.png" type="Texture" id=109]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_12.png" type="Texture" id=110]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_13.png" type="Texture" id=111]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_14.png" type="Texture" id=112]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_15.png" type="Texture" id=113]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_16.png" type="Texture" id=114]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_17.png" type="Texture" id=115]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_18.png" type="Texture" id=116]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/move/survivor-move_handgun_19.png" type="Texture" id=117]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_0.png" type="Texture" id=118]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_1.png" type="Texture" id=119]
[ext_resource path="res://Sprites/Top_Down_Survivor/Top_Down_Survivor/handgun/shoot/survivor-shoot_handgun_2.png" type="Texture" id=120]
[ext_resource path="res://Sprites/HUD/box1.png" type="Texture" id=121]
[ext_resource path="res://Sprites/HUD/box2.png" type="Texture" id=122]
[ext_resource path="res://Sprites/HUD/knife.png" type="Texture" id=123]
[ext_resource path="res://Sprites/HUD/handgun.png" type="Texture" id=124]
[ext_resource path="res://Scenes/MeleeAttack.tscn" type="PackedScene" id=125]
[ext_resource path="res://Sprites/HUD/health_empty.png" type="Texture" id=126]
[ext_resource path="res://Sprites/HUD/health_full.png" type="Texture" id=127]
[ext_resource path="res://Sprites/HUD/256_face.png" type="Texture" id=128]
[ext_resource path="res://Sprites/HUD/hunger/hunger_empty.png" type="Texture" id=129]
[ext_resource path="res://Sprites/HUD/hunger/hunger_full.png" type="Texture" id=130]
[ext_resource path="res://Sprites/HUD/hunger/burger128.png" type="Texture" id=131]
[ext_resource path="res://Audio/handgun_shoot.wav" type="AudioStream" id=132]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 16.8558, 21.566 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 19.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "idle_handgun",
"speed": 19.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "move_knife",
"speed": 19.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ) ],
"loop": true,
"name": "idle_knife",
"speed": 19.0
}, {
"frames": [ ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ) ],
"loop": true,
"name": "attack_knife",
"speed": 19.0
}, {
"frames": [ ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ) ],
"loop": true,
"name": "move_handgun",
"speed": 5.0
}, {
"frames": [ ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ) ],
"loop": true,
"name": "attack_handgun",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=4]

resource_name = "get_hit"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.956863, 0.262745, 0.211765, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" index="0"]

scale = Vector2( 0.53, 0.53 )
z_index = 5
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
speed = 200

[node name="CollisionPlayer" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -0.387421, 2.90567 )
shape = SubResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Feet" type="AnimatedSprite" parent="." index="1"]

scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

scale = Vector2( 0.249012, 0.293603 )
frames = SubResource( 3 )
animation = "idle_knife"
frame = 16
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Inventory" type="CanvasLayer" parent="." index="3"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="box1" type="Sprite" parent="Inventory" index="0"]

position = Vector2( 32, 544 )
texture = ExtResource( 121 )
_sections_unfolded = [ "Transform" ]

[node name="box2" type="Sprite" parent="Inventory" index="1"]

position = Vector2( 64, 544 )
texture = ExtResource( 122 )
_sections_unfolded = [ "Transform" ]

[node name="box3" type="Sprite" parent="Inventory" index="2"]

position = Vector2( 96, 544 )
texture = ExtResource( 122 )

[node name="box4" type="Sprite" parent="Inventory" index="3"]

position = Vector2( 128, 544 )
texture = ExtResource( 122 )

[node name="box5" type="Sprite" parent="Inventory" index="4"]

position = Vector2( 160, 544 )
texture = ExtResource( 122 )

[node name="box6" type="Sprite" parent="Inventory" index="5"]

position = Vector2( 192, 544 )
texture = ExtResource( 122 )

[node name="box7" type="Sprite" parent="Inventory" index="6"]

position = Vector2( 224, 544 )
texture = ExtResource( 122 )

[node name="box8" type="Sprite" parent="Inventory" index="7"]

position = Vector2( 256, 544 )
texture = ExtResource( 122 )

[node name="knife" type="Sprite" parent="Inventory" index="8"]

position = Vector2( 32, 544 )
texture = ExtResource( 123 )

[node name="handgun" type="Sprite" parent="Inventory" index="9"]

position = Vector2( 64, 544 )
scale = Vector2( 0.788893, 0.825607 )
texture = ExtResource( 124 )

[node name="Camera2D" type="Camera2D" parent="." index="4"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="MeleeAttack" parent="." index="5" instance=ExtResource( 125 )]

position = Vector2( 36.0155, 0 )
scale = Vector2( 1.07583, 1 )

[node name="RayCast2D" type="RayCast2D" parent="." index="6"]

rotation = -1.5708
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="GUI" type="CanvasLayer" parent="." index="7"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="TextureProgress" type="TextureProgress" parent="GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 63.0
margin_top = 10.0
margin_right = 192.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
texture_under = ExtResource( 126 )
texture_over = null
texture_progress = ExtResource( 127 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Textures" ]

[node name="256_face" type="Sprite" parent="GUI" index="1"]

position = Vector2( 35.4834, 36.0685 )
scale = Vector2( 0.204044, 0.218981 )
texture = ExtResource( 128 )

[node name="Hunger" type="TextureProgress" parent="GUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 97.0
margin_top = 41.0
margin_right = 167.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
texture_under = ExtResource( 129 )
texture_over = null
texture_progress = ExtResource( 130 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Textures" ]

[node name="burger128" type="Sprite" parent="GUI" index="3"]

position = Vector2( 82.3839, 45.8643 )
scale = Vector2( 0.229844, 0.287487 )
texture = ExtResource( 131 )

[node name="Audio" type="Node2D" parent="." index="8"]

editor/display_folded = true

[node name="Handgun_Shoot" type="AudioStreamPlayer2D" parent="Audio" index="0"]

stream = ExtResource( 132 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/get_hit = SubResource( 4 )
blend_times = [  ]

[node name="HungerTick" type="Timer" parent="." index="10"]

process_mode = 1
wait_time = 7.0
one_shot = false
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="HungerTick" to="." method="_on_HungerTick_timeout"]


